<resources>
    <string name="app_name">数独</string>
    <string name="new_game">新游戏</string>
    <string name="resume_game">回到游戏</string>
    <string name="exit">退出</string>
    <string name="about">关于数独</string>
    <string name="soduku_intro">    数独是源自18世纪瑞士的一种数学游戏。是一种运用纸、笔进行演算的逻辑游戏。玩家需要根据9×9盘面上的已知数字，推理出所有剩余空格的数字，并满足每一行、每一列、每一个粗线宫（3*3）内的数字均含1-9，不重复。 数独盘面是个九宫，每一宫又分为九个小格。在这八十一格中给出一定的已知数字和解题条件，利用逻辑和推理，在其他的空格上填入1-9的数字。使1-9每个数字在每一行、每一列和每一宫中都只出现一次，所以又称“九宫格”。</string>
    <string name="game_title">Game</string>
    <string name="no_moves_lable">No moves</string>
    <string name="keypad_title">Keypad</string>
</resources>
