<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.caoxiaojian.soduku.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <Button
            android:id="@+id/btn_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_resume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resume_game"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>







